# Addict-Editor

./: .gitignore  Cargo.toml  README.md
src/: bridge.rs  main.rs  tests.rs
src/save/: appearance.rs  backup.rs  businesses.rs  inventory.rs  manager.rs  misc.rs  mod.rs  models.rs  money.rs  nested.rs  npcs.rs  paths.rs  products.rs  properties.rs  quests.rs  rank.rs  templates.rs  variables.rs
ui/: app.slint  theme.slint  widgets.slint
